Add APIs for labels
